PlaybackConfig: add option whether playback should start on track add

CHANGES:
 * Added an option whether adding tracks to playlist should start playing.

Also changed the entry in the 2.8 Beta ChangeLog, which is a bit strange,
but I believe the ChangeLog is most useful for differences between major
releases and it would be really confusing if the entry wasn't changed.

BUG: 322428
FIXED-IN: 2.8